# Oxide-LB

./: .dockerignore  Cargo.toml  Dockerfile  LICENSE  Makefile  compose.yml  readme.md
.github/workflows/: build.yml  ci.yml
src/: lib.rs  main.rs
src/lb/: backend.rs  config.rs  connection_guard.rs  load_balancer.rs  mod.rs  strategy.rs
src/lb/strategies/: least_connections.rs  round_robin.rs
